--- a/package.json
+++ b/package.json
@@ -6,7 +6,10 @@
     "start": "expo start",
     "android": "expo start --android",
     "ios": "expo start --ios",
-    "web": "expo start --web"
+    "web": "expo start --web",
+    "lint": "eslint . --ext '.js,.jsx,.ts,.tsx' --cache",
+    "lint:fix": "npm run lint -- --fix",
+    "build:tsc": "tsc --build"
   },
   "dependencies": {
     "@expo/webpack-config": "^19.0.0",
@@ -26,7 +29,15 @@
   "devDependencies": {
     "@babel/core": "^7.20.0",
     "@types/react": "~18.2.14",
-    "typescript": "^5.1.3"
+    "@typescript-eslint/eslint-plugin": "^6.8.0",
+    "eslint": "^8.51.0",
+    "eslint-config-standard-with-typescript": "^39.1.1",
+    "eslint-plugin-import": "^2.28.1",
+    "eslint-plugin-n": "^16.2.0",
+    "eslint-plugin-promise": "^6.1.1",
+    "eslint-plugin-react": "^7.33.2",
+    "prettier": "^3.0.3",
+    "typescript": "^5.2.2"
   },
   "private": true
 }
