--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,11 +1,36 @@
 {
-  "extends": "expo/tsconfig.base",
   "compilerOptions": {
+    "module": "ES2022",
     "strict": true,
+    "esModuleInterop": true,
+    "moduleResolution": "node",
     "skipLibCheck": true,
-    "baseUrl": ".",
+    "forceConsistentCasingInFileNames": true,
+    "alwaysStrict": true,
+    "declaration": true,
+    "inlineSourceMap": true,
+    "inlineSources": true,
+    "noEmitOnError": true,
+    "noImplicitAny": true,
+    "noImplicitReturns": true,
+    "noImplicitThis": true,
+    "noUnusedLocals": true,
+    "noUnusedParameters": true,
+    "resolveJsonModule": true,
+    "strictNullChecks": true,
+    "strictPropertyInitialization": true,
+    "stripInternal": true,
+    "isolatedModules": true,
+    "allowJs": true,
+
+    "baseUrl": "./",
+    "noEmit": true, // No emits, stops the compilation from emitting files. This cannot be placed at a "global" tsconfig, since you can't reference another project that does not emit files.
+    "lib": ["DOM", "ESNext"],
+    "target": "ESNext",
+    "jsx": "react-native",
     "paths": {
       "@/*": ["./src/*"]
     }
-  }
+  },
+  "include": ["src"]
 }
