--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@react-navigation/native": "^6.1.8",
     "@react-navigation/native-stack": "^6.9.14",
     "@tanstack/react-query": "^5.0.0",
+    "@types/react-native-snap-carousel": "^3.8.7",
     "cross-env": "^7.0.3",
     "expo": "~49.0.13",
     "expo-status-bar": "~1.6.0",
@@ -29,6 +30,7 @@
     "react-native": "0.72.5",
     "react-native-safe-area-context": "4.6.3",
     "react-native-screens": "~3.22.0",
+    "react-native-snap-carousel": "^3.9.1",
     "react-native-svg": "^13.4.0",
     "react-native-web": "~0.19.6"
   },
