--- a/package.json
+++ b/package.json
@@ -16,19 +16,21 @@
     "@gluestack-style/react": "^1.0.7",
     "@gluestack-ui/config": "^1.0.3",
     "@gluestack-ui/themed": "^1.0.7",
+    "@react-native-firebase/firestore": "^18.7.3",
     "@react-navigation/bottom-tabs": "^6.5.9",
     "@react-navigation/native": "^6.1.8",
     "@react-navigation/native-stack": "^6.9.14",
     "@tanstack/react-query": "^5.0.0",
     "@types/react-native-snap-carousel": "^3.8.7",
     "cross-env": "^7.0.3",
+    "eventemitter": "^0.3.3",
     "expo": "~49.0.13",
     "expo-status-bar": "~1.6.0",
     "firebase": "^10.5.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.72.6",
-    "react-native-paper": "^5.11.4",
+    "react-native-paper": "^5.11.6",
     "react-native-safe-area-context": "4.6.3",
     "react-native-screens": "~3.22.0",
     "react-native-snap-carousel": "^3.9.1",
